Change close (x) button image path to be relative to the WP install path. This fixes the button not showing up issue for site installed in a subfolder Change close button from <a> to <div> to prevent it being made ineffective by (poorly written) theme Javascripts
git-svn-id: https://plugins.svn.wordpress.org/popupally/trunk@931289 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/resource/template/clean/frontend/clean-popup.css
+++ b/resource/template/clean/frontend/clean-popup.css
@@ -124,7 +124,7 @@ background-image:none;
 }
 .popupally-outer-plsbvs-{{num}} .popupally-close-plsbvs:link, .popupally-outer-plsbvs-{{num}} .popupally-close-plsbvs:visited, .popupally-outer-plsbvs-{{num}} .popupally-close-plsbvs:hover, .popupally-outer-plsbvs-{{num}} .popupally-close-plsbvs:active{text-decoration:none;}
 .popupally-outer-plsbvs-{{num}} .popupally-close-plsbvs {
-background-image:url('/wp-content/plugins/popupally/resource/frontend/img/fancy_close.png');
+background-image:url('{{plugin_uri}}/resource/frontend/img/fancy_close.png');
 background-size:cover;
 display: block;
 position: absolute;
